# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = zest.zodbupdate
# version = attr: src.VERSION
url = https://github.com/zestsoftware/zest.zodbupdate
# project_urls = dict
author = Maurits van Rees
author_email = m.van.rees@zestsoftware.nl
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Plone
    Framework :: Plone :: 5.2
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Operating System :: OS Independent
    License :: OSI Approved :: Zope Public License
license = ZPL 2.1
description = zodbupdate rename rules by Zest
long_description = file: README.rst, CHANGES.rst
keywords = Zope, Plone, ZODB

[options]
zip_safe = False
install_requires =
    setuptools
    zodbupdate
include_package_data = True
packages = find:
package_dir =
    =src
namespace_packages = zest

[options.entry_points]
zodbupdate =
    renames = zest.zodbupdate.renames:rename_dict

[options.packages.find]
where=src

[options.package_data]
* = *.txt, *.rst

[bdist_wheel]
universal = 1
