# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = zest.zodbupdate
version = 2.0.0.dev0
url = https://github.com/zestsoftware/zest.zodbupdate
# project_urls = dict
author = Maurits van Rees
author_email = m.van.rees@zestsoftware.nl
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Plone
    Framework :: Plone :: 6.0
    Framework :: Plone :: 6.1
    Framework :: Plone :: 6.2
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Operating System :: OS Independent
license = ZPL-2.1
description = zodbupdate rename rules by Zest
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
keywords = Zope, Plone, ZODB

[options]
zip_safe = False
python_requires = >=3.9
install_requires =
    zodbupdate
include_package_data = True

[options.entry_points]
zodbupdate =
    renames = zest.zodbupdate.renames:rename_dict

[options.package_data]
* = *.txt, *.rst

[bdist_wheel]
universal = 1
